--- a/packages/docs/design-docs/ux-writing/status-messages.mdx
+++ b/packages/docs/design-docs/ux-writing/status-messages.mdx
@@ -1,4 +1,4 @@
-import { DosAndDonts, Dos, Donts, IconDo, IconDont } from "@components/big-design/DosAndDonts";
+import { Donts, Dos } from '@components/big-design/DosAndDonts';
 
 # Status messages
 
@@ -15,12 +15,11 @@ Messages should be short and to the point. Focus on what happened and what the u
 Don’t start status messages with “It seems like…” or “It looks like….” It sounds like we don’t know what went wrong. There’s no room for ambiguity — especially when we’re trying to confirm a potentially destructive action.
 
 <Donts>
-<div class="hidden">
-**Don't**
-</div>
-<div className="flex items-center justify-center">
-![Don't write vague error messages](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.interactions-status-messages_vague_language.png)
-</div>
+  <div className="hidden">**Don't**</div>
+  <div className="flex items-center justify-center">
+    ![Don't write vague error
+    messages](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.interactions-status-messages_vague_language.png)
+  </div>
 </Donts>
 
 ### Use positive language
@@ -40,12 +39,11 @@ Only use “please” when asking the user to go out of their way to do somethin
 Words and phrases like “Whoops” or “Oh no!” could be taken as inconsiderate, even insulting.
 
 <Donts>
-<div class="hidden">
-**Don't**
-</div>
-<div className="flex items-center justify-center">
-![Avoid humor in error messages](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.interactions-status-messages-avoid_humor.png)
-</div>
+  <div className="hidden">**Don't**</div>
+  <div className="flex items-center justify-center">
+    ![Avoid humor in error
+    messages](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.interactions-status-messages-avoid_humor.png)
+  </div>
 </Donts>
 
 ### Follow the &#123;verb&#125; + &#123;noun&#125; formula.
@@ -53,12 +51,11 @@ Words and phrases like “Whoops” or “Oh no!” could be taken as inconsider
 Use supporting copy to provide additional context as needed.
 
 <Dos>
-<div class="hidden">
-**Do**
-</div>
-<div className="flex items-center justify-center">
-![Confirmation example](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.interactions-confirmations-supporting_copy.png)
-</div>
+  <div className="hidden">**Do**</div>
+  <div className="flex items-center justify-center">
+    ![Confirmation
+    example](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.interactions-confirmations-supporting_copy.png)
+  </div>
 </Dos>
 
 ### Don’t ask vague questions
@@ -66,29 +63,27 @@ Use supporting copy to provide additional context as needed.
 “Are you sure?” About what? It’s not clear to the user what we’re trying to confirm.
 
 <Donts>
-<div class="hidden">
-**Don't**
-</div>
-<div className="flex items-center justify-center">
-![Don't ask vague questions](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.interactions-confirmations-vague_questions.png)
-</div>
+  <div className="hidden">**Don't**</div>
+  <div className="flex items-center justify-center">
+    ![Don't ask vague
+    questions](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.interactions-confirmations-vague_questions.png)
+  </div>
 </Donts>
 
 ### Always use “Cancel”
 
-For modal alerts, always use “cancel” when giving the user the option to back out. Never use “stop,” “pause,” “terminate,” “never mind” or “back” 
+For modal alerts, always use “cancel” when giving the user the option to back out. Never use “stop,” “pause,” “terminate,” “never mind” or “back”
 
 ### Write descriptive buttons
 
 When a user clicks a button, whether it’s to confirm an action or cancel one, it should be clear what will happen when they click.
 
 <Dos>
-<div class="hidden">
-**Do**
-</div>
-<div className="flex items-center justify-center">
-![Don't use vague CTAs](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.interactions-confirmations-supporting_copy.png)
-</div>
+  <div className="hidden">**Do**</div>
+  <div className="flex items-center justify-center">
+    ![Don't use vague
+    CTAs](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.interactions-confirmations-supporting_copy.png)
+  </div>
 </Dos>
 
 ### Include applicable links
@@ -96,10 +91,9 @@ When a user clicks a button, whether it’s to confirm an action or cancel one, 
 Whenever possible, save the user some trouble and provide a link to the place where the user can fix the error. It’s okay to include “Learn more” links to Knowledge Base articles.
 
 <Dos>
-<div class="hidden">
-**Do**
-</div>
-<div className="flex items-center justify-center">
-![Banner error, with header](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.interactions-status-messages_banners.png)
-</div>
+  <div className="hidden">**Do**</div>
+  <div className="flex items-center justify-center">
+    ![Banner error, with
+    header](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.interactions-status-messages_banners.png)
+  </div>
 </Dos>
