--- a/packages/docs/design-docs/ux-writing/grammar.mdx
+++ b/packages/docs/design-docs/ux-writing/grammar.mdx
@@ -1,6 +1,6 @@
-import Icon from "@components/icons/Icon";
-import { DosAndDonts, Dos, Donts, IconDo, IconDont } from "@components/big-design/DosAndDonts";
-import { ComparisonTable } from "@components/big-design/ComparisonTable";
+import { ComparisonTable } from '@components/big-design/ComparisonTable';
+import { Donts, Dos, DosAndDonts } from '@components/big-design/DosAndDonts';
+import Icon from '@components/icons/Icon';
 
 # Grammar
 
@@ -9,52 +9,45 @@ import { ComparisonTable } from "@components/big-design/ComparisonTable";
 Contractions are handy for adjusting your tone. Using them makes your writing sound more casual. Not using them makes your writing sound more formal. That said, if you wouldn’t use the contraction in everyday speech, avoid using it in your writing. And while BigCommerce is a Texas company, let’s avoid “y’all,” y’all.
 
 <DosAndDonts>
-<Dos hideHeader={true}>
-<div class="hidden">
-**Do**
-</div>
-<div>
-Aren’t, can’t, couldn’t, could’ve, didn’t, don’t, doesn’t, hasn’t, haven’t, isn’t, let’s, shouldn’t, should’ve, that’s, there’s, they’re, we’ll, weren’t, we’ve, wasn’t, won’t, wouldn’t, you’ll, you’re
-</div>
-</Dos>
-<Donts hideHeader={true}>
-<div class="hidden">
-**Don't**
-</div>
-<div>
-Ain’t, e’er, mightn’t, mustn’t, o’clock, shan’t, ‘twas, y’all
-</div>
-</Donts>
+  <Dos hideHeader={true}>
+    <div className="hidden">**Do**</div>
+    <div>
+      Aren’t, can’t, couldn’t, could’ve, didn’t, don’t, doesn’t, hasn’t, haven’t, isn’t, let’s,
+      shouldn’t, should’ve, that’s, there’s, they’re, we’ll, weren’t, we’ve, wasn’t, won’t,
+      wouldn’t, you’ll, you’re
+    </div>
+  </Dos>
+  <Donts hideHeader={true}>
+    <div className="hidden">**Don't**</div>
+    <div>Ain’t, e’er, mightn’t, mustn’t, o’clock, shan’t, ‘twas, y’all</div>
+  </Donts>
 </DosAndDonts>
 
 ## Numbers
 
 Always use numerals (1, 2, 3, etc.) instead of writing out numbers (one, two, three, etc.). This is a big departure from traditional writing style. Keep in mind, you're writing for the web and the old rules were made with print in mind.
 
-From [Nielsen Norman Group <Icon name="external" className="inline w-4 h-auto" includesWrapper={false} />](https://www.nngroup.com/articles/web-writing-show-numbers-as-numerals/ "https://www.nngroup.com/articles/web-writing-show-numbers-as-numerals/") (NN/g):
+From [Nielsen Norman Group <Icon name="external" className="inline w-4 h-auto" includesWrapper={false} />](https://www.nngroup.com/articles/web-writing-show-numbers-as-numerals/ 'https://www.nngroup.com/articles/web-writing-show-numbers-as-numerals/') (NN/g):
 
 > **When writing for the Web:**
-> 
+>
 > - Write numbers with digits, not letters (23, not twenty-three).
-> 
+>
 > - Use numerals even when the number is the first word in a sentence or bullet point.
-> 
+>
 > - Use numerals for big numbers up to one billion:
+>
 >   - 2,000,000 is better than two million.
-> 
+>
 >   - Two trillion is better than 2,000,000,000,000 because most people can't interpret that many zeros.
-> 
+>
 >   - As a compromise, you can often use numerals for the significant digits and write out the magnitude as a word. For example, write 24 billion (not twenty-four billion or 24,000,000,000).
 
 NN/g still recommends writing out numbers that don’t represent specific data. In the example below, it’s better to write out “thousands” than “1000s.”
 
 <Dos hideHeader={true}>
-<div class="hidden">
-**Do**
-</div>
-<div>
-Thousands of online stores are created using BigCommerce every year.
-</div>
+  <div className="hidden">**Do**</div>
+  <div>Thousands of online stores are created using BigCommerce every year.</div>
 </Dos>
 
 ## Active vs. passive voice
@@ -62,57 +55,40 @@ Thousands of online stores are created using BigCommerce every year.
 Try to use the active voice. It’s simpler and more direct than the passive voice. Not sure what the difference is between active and passive? Here are some examples:
 
 <ComparisonTable>
-| Active | Passive |
-| --- | --- |
-| Choose a payment method | Choose the preferred payment method |
-| We recommend… | It is recommended… |
-| Turn on the setting | The setting should be turned on |
+  | Active | Passive | | --- | --- | | Choose a payment method | Choose the preferred payment method
+  | | We recommend… | It is recommended… | | Turn on the setting | The setting should be turned on |
 </ComparisonTable>
 
 As you can see, with the passive voice it’s not clear who the subject is and who’s doing the acting. It’s indirect, confusing and wordy. Granted, writing in the active voice can sometimes feel too direct, even a little bossy. Users, however, appreciate it when you give them the info they need without a lot of fluff.
 
 Of course, there are exceptions to the rule. Here’s when it might be okay to use the passive voice:
 
- -   To avoid referencing BigCommerce or your app by name when doing so would be distracting
-    
- -   To make it clear that BigCommerce or your app didn’t personally take an action or make a decision; rather, the software took the action
-    
- -   If the object or the action are more important than the subject doing the action
+- To avoid referencing BigCommerce or your app by name when doing so would be distracting
+
+- To make it clear that BigCommerce or your app didn’t personally take an action or make a decision; rather, the software took the action
+
+- If the object or the action are more important than the subject doing the action
 
 <DosAndDonts>
-<Dos hideHeader={true}>
-BigCommerce will create and email your invoices monthly to
-</Dos>
-<Donts hideHeader={true}>
-BigCommerce creates and emails your invoices monthly to philip@nomail.com.
-</Donts>
+  <Dos hideHeader={true}>BigCommerce will create and email your invoices monthly to</Dos>
+  <Donts hideHeader={true}>
+    BigCommerce creates and emails your invoices monthly to philip@nomail.com.
+  </Donts>
 </DosAndDonts>
-
 
 ## Pluralities
 
 A plurality occurs when the copy changes depending on the number of items you’re writing about. Whenever possible, write unique copy for the singular and plural forms, displaying the appropriate version as needed. If the possibility of a plural exists, but technological limitations prevent you from using variable copy, then default to the plural form.
 
-
 <DosAndDonts>
-<Dos>
-<div class="hidden">
-**Do**
-</div>
-<div>
- - You have a new message.
- - You have 10 new messages.
-</div>
-</Dos>
-<Donts>
-<div class="hidden">
-**Don't**
-</div>
-<div>
- - You have a new message or messages.
- - You have a new message(s)
-</div>
-</Donts>
+  <Dos>
+    <div className="hidden">**Do**</div>
+    <div>- You have a new message. - You have 10 new messages.</div>
+  </Dos>
+  <Donts>
+    <div className="hidden">**Don't**</div>
+    <div>- You have a new message or messages. - You have a new message(s)</div>
+  </Donts>
 </DosAndDonts>
 
 ## Present vs. past tense
@@ -124,27 +100,14 @@ For confirmation, success and error messages it’s okay to use the past partici
 Past participles usually end with “-ed,” “-d,” “-t,” “-en” or “-n.”
 
 <DosAndDonts>
-<Dos>
-<div class="hidden">
-**Do**
-</div>
-<div>
- - Settings saved
- - App installed
- - Payment failed
- - Message sent
-</div>
-</Dos>
-<Donts>
-<div class="hidden">
-**Don't**
-</div>
-<div>
- - Settings have been saved
- - App was installed
- - Payment has failed
- - Message was sent
-</div>
-</Donts>
+  <Dos>
+    <div className="hidden">**Do**</div>
+    <div>- Settings saved - App installed - Payment failed - Message sent</div>
+  </Dos>
+  <Donts>
+    <div className="hidden">**Don't**</div>
+    <div>
+      - Settings have been saved - App was installed - Payment has failed - Message was sent
+    </div>
+  </Donts>
 </DosAndDonts>
-
