--- a/packages/docs/design-docs/ux-writing/index.mdx
+++ b/packages/docs/design-docs/ux-writing/index.mdx
@@ -1,6 +1,6 @@
-import LandingCard from "@components/Card/LandingCard";
-import CardGrid from "@components/Card/CardGrid";
-import Icon from "@components/icons/Icon";
+import CardGrid from '@components/Card/CardGrid';
+import LandingCard from '@components/Card/LandingCard';
+import Icon from '@components/icons/Icon';
 
 # UX writing guide
 
@@ -29,7 +29,7 @@ Writers, researchers, designers and developers, both internal and external, who 
 
 - Not sure if you need a period at the end of a heading?
 
-- Is there a difference between “log in” and “login?” 
+- Is there a difference between “log in” and “login?”
 
 - Can the words “back” and “cancel” be used interchangeably?
 
