--- a/packages/docs/design-docs/ux-writing/the-basics.mdx
+++ b/packages/docs/design-docs/ux-writing/the-basics.mdx
@@ -1,6 +1,6 @@
-import Icon from "@components/icons/Icon";
-import { DosAndDonts, Dos, Donts, IconDo, IconDont } from "@components/big-design/DosAndDonts";
-import { ComparisonTable } from "@components/big-design/ComparisonTable";
+import { ComparisonTable } from '@components/big-design/ComparisonTable';
+import { Donts, Dos, DosAndDonts } from '@components/big-design/DosAndDonts';
+import Icon from '@components/icons/Icon';
 
 # The basics
 
@@ -9,17 +9,17 @@ import { ComparisonTable } from "@components/big-design/ComparisonTable";
 For general guidelines on voice and tone, here’s a passage from the BigCommerce _Global Writing Style Guide:_
 
 > Just like a person, a brand has a distinct personality and voice. This voice is unique, recognizable, and consistent, helping bring BigCommerce to life across all channels and touchpoints.
-> 
+>
 > BigCommerce is:
-> 
+>
 > **Professional**, not boring
-> 
+>
 > **Direct**, not wordy
-> 
+>
 > **Relatable**, not sales-y
-> 
+>
 > **Knowledgeable**, and proud to be ecommerce experts
-> 
+>
 > **Often inspirational**, sometimes clever
 
 ## Show empathy
@@ -31,44 +31,36 @@ Showing empathy towards the user is one of the fundamental precepts of product d
 We want to tell users what they _can_ do, as opposed to what they _can’t_ do. Why? Because using BigCommerce should be a positive experience. When words like “can’t” and “don’t” appear in your writing, they should serve as red flags that you’re using negative language.
 
 <DosAndDonts>
-<Dos hideHeader={true}>
-<div class="hidden">
-**Do**
-</div>
-<div>
-To turn on this setting, connect your PayPal account first.
-</div>
-</Dos>
-<Donts hideHeader={true}>
-<div class="hidden">
-**Don't**
-</div>
-<div>
-You can’t turn on this setting until you connect your PayPal account.
-</div>
-</Donts>
+  <Dos hideHeader={true}>
+    <div className="hidden">**Do**</div>
+    <div>To turn on this setting, connect your PayPal account first.</div>
+  </Dos>
+  <Donts hideHeader={true}>
+    <div className="hidden">**Don't**</div>
+    <div>You can’t turn on this setting until you connect your PayPal account.</div>
+  </Donts>
 </DosAndDonts>
 
 You should also watch out for deceptive design (sometimes called dark UX). Deceptive design refers to any friction or tricks present in the UI, put there to try and get users to do something they probably don’t want to do. If you’ve ever had a hard time canceling or unsubscribing from an online account — that’s deceptive design. If you’ve ever been made to feel bad about your decisions — that’s deceptive design. Don’t do it.
 
-
-
 <DosAndDonts>
-<Dos>
-![](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.the_basics-be_positive-do.png "title")
-</Dos>
-<Donts>
-![](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.the_basics-be_positive-dont.png "title")
-</Donts>
+  <Dos>
+    ![](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.the_basics-be_positive-do.png
+    "title")
+  </Dos>
+  <Donts>
+    ![](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.the_basics-be_positive-dont.png
+    "title")
+  </Donts>
 </DosAndDonts>
 
 ## Don’t get meta
 
-Have you ever watched a movie where the characters talked about being in a movie? That’s what it means to be [meta <Icon name="external" className="inline w-4 h-auto" includesWrapper={false} />](https://www.merriam-webster.com/dictionary/meta "https://www.merriam-webster.com/dictionary/meta"). The _Scream_ and _Deadpool_ movies are great examples. The characters seem to know they’re in a movie and help the audience by explaining what’s happening.
+Have you ever watched a movie where the characters talked about being in a movie? That’s what it means to be [meta <Icon name="external" className="inline w-4 h-auto" includesWrapper={false} />](https://www.merriam-webster.com/dictionary/meta 'https://www.merriam-webster.com/dictionary/meta'). The _Scream_ and _Deadpool_ movies are great examples. The characters seem to know they’re in a movie and help the audience by explaining what’s happening.
 
 A good design, like a bad movie, should be predictable. If we need to get meta and explain where something is or how to use it within the UI itself, then we should take a second look at the UI.
 
-Granted, there may be instances where you must provide guidance to the user as to what they should do next or where they need to go to find something. In a cases like these, try to be concrete and specific. 
+Granted, there may be instances where you must provide guidance to the user as to what they should do next or where they need to go to find something. In a cases like these, try to be concrete and specific.
 
 Avoid vague directions like “below/above” and “left/right.” If you need to direct the user to a specific page, link to the page or section of the page.
 
@@ -82,7 +74,7 @@ The goal of this section of the UX writing guide is to give you a quick gloss on
 
 ### What is inclusive language?
 
-[Inclusive language <Icon name="external" className="inline w-4 h-auto" includesWrapper={false} />](https://www.collinsdictionary.com/dictionary/english/inclusive-language "https://www.collinsdictionary.com/dictionary/english/inclusive-language") is defined as:
+[Inclusive language <Icon name="external" className="inline w-4 h-auto" includesWrapper={false} />](https://www.collinsdictionary.com/dictionary/english/inclusive-language 'https://www.collinsdictionary.com/dictionary/english/inclusive-language') is defined as:
 
 > Language that avoids the use of certain expressions or words that might be considered to exclude particular groups of people, esp gender-specific words, such as ‘man,’ ‘mankind,’ and masculine pronouns, the use of which might be considered to exclude women.
 
@@ -115,24 +107,26 @@ Promotes negative beliefs about aging and older adults.
 Check the chart below for non-inclusive words and phrases commonly encountered in UX writing and suggested replacements.
 
 <ComparisonTable>
-| Inclusive |  Non-inclusive |
-|---|---|
-| Artificial, synthetic, fabricated, manufactured   | Man-made |
-| Businessperson                                    | Businessman |
-| Staffed, managed, staffing, workforce             | Manned, manpower |
-| Baffling, confusing, unbelievable, silly          | Crazy, insane |
-| Denylist, blocklist                               | Blacklist |
-| Allowlist                                         | Whitelist |
-| Slows                                             | Cripples |
-| Placeholder                                       | Dummy |
-| You all                                           | Guys |
-| They, them, their                                 | He, him, she, her |
-| Primary, secondary                                | Master, slave |
-| Confidence check                                  | Sanity check |
-| Gap, weak point                                   | Blind spot |
-| Legacy, exempt                                    | Grandfathered in |
-| Meeting, gathering                                | Pow wow |
-| Easy, simple                                      | Cakewalk |
+
+| Inclusive                                       | Non-inclusive     |
+| ----------------------------------------------- | ----------------- |
+| Artificial, synthetic, fabricated, manufactured | Man-made          |
+| Businessperson                                  | Businessman       |
+| Staffed, managed, staffing, workforce           | Manned, manpower  |
+| Baffling, confusing, unbelievable, silly        | Crazy, insane     |
+| Denylist, blocklist                             | Blacklist         |
+| Allowlist                                       | Whitelist         |
+| Slows                                           | Cripples          |
+| Placeholder                                     | Dummy             |
+| You all                                         | Guys              |
+| They, them, their                               | He, him, she, her |
+| Primary, secondary                              | Master, slave     |
+| Confidence check                                | Sanity check      |
+| Gap, weak point                                 | Blind spot        |
+| Legacy, exempt                                  | Grandfathered in  |
+| Meeting, gathering                              | Pow wow           |
+| Easy, simple                                    | Cakewalk          |
+
 </ComparisonTable>
 
 ### Rules for inclusive writing
@@ -152,5 +146,3 @@ Only mention gender, sexual orientation, religion, race, age or physical abiliti
 **When all else fails, write around the pronouns**
 
 In many cases you can reword your sentences and avoid using pronouns in the first place.
-
-
